Final deployment fixes - Force npm usage
- Added packageManager field to explicitly specify npm
- Added engines field for Node.js and npm versions
- Updated vercel.json with Node.js runtime specification
- Verified build works locally with npm
- This should definitively resolve pnpm detection issues

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,10 @@
 {
   "buildCommand": "npm run build",
   "installCommand": "npm install --legacy-peer-deps",
-  "framework": "nextjs"
+  "framework": "nextjs",
+  "functions": {
+    "app/**": {
+      "runtime": "nodejs18.x"
+    }
+  }
 }
